# test-task

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
api/: Dockerfile
api/settings/: celery.py  settings.py  urls.py
api/tasks/: admin.py  apps.py  bg_tasks.py  filters.py  models.py  open_api.py  serializers.py  server_auth.py  urls.py  views.py
api/tasks/migrations/: 0001_initial.py
bot/: Dockerfile  __main__.py  api_client.py  handlers.py  normalization.py  schemes.py  settings.py
